--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 
   <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.min.js'></script>
   <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular-route.min.js'></script>
+  <script src='config.js'></script>
   <script src="module.js"></script>
   <script src="movieList.js"></script>
   <script src="searchCriteria.js"></script>
   <script src="watchlistPage.js"></script>
-  <script src="service.js"></script>
+  <script src="MovieService.js"></script>
 </body>
 </html>
