--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>MOVIES!</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Average|Fjalla+One" rel="stylesheet">
 </head>
 <body>
 
