--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>MOVIES!</title>
 
   <link href="https://fonts.googleapis.com/css?family=Average|Fjalla+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 
