--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
 
   <a href="#!/watchlistpage">Watchlist</a>
-  <a href="#!/movielist">Movie list</a>
+  <a href="#!/search">Search</a>
+  <h1><a href="#!/movielist">Name</a></h1>
 
   <ng-view></ng-view>
 
