added css styling to title and nav

--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
   <link rel="stylesheet" href="style.css">
   <title>MOVIES!</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Average|Fjalla+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Average|Fjalla+One|Luckiest+Guy" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  
 </head>
 <body>
-
-  <a href="#!/watchlistpage">Watchlist</a>
-  <a href="#!/search">Search</a>
-  <h1><a href="#!/movielist">Name</a></h1>
+  <div class="nav">
+      <a class="title" href="#!/movielist">A.M.P.</a>
+      <div>
+          <a href="#!/watchlistpage">Watchlist</a>
+          <a href="#!/search">Search</a>
+      </div>
+  </div>
+ 
 
 
   <ng-view></ng-view>
