--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <title>MOVIES!</title>
+  <title>A.M.P!</title>
 
   <link href="https://fonts.googleapis.com/css?family=Average|Fjalla+One|Luckiest+Guy" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -15,7 +15,9 @@
   <div class="nav">
       <a class="title" href="#!/movielist">A.M.P.</a>
       <div>
+          <i class="material-icons on watch">visibility</i>
           <a href="#!/watchlistpage">Watchlist</a>
+          <i class="material-icons search">search</i>
           <a href="#!/search">Search</a>
       </div>
   </div>
